fixed the about me text field This breaks the current css for the check categories button on the submit mod page.

--- a/mod-picker/app/assets/stylesheets/angular.scss
+++ b/mod-picker/app/assets/stylesheets/angular.scss
@@ -575,7 +575,7 @@ input[type="submit"] {
 }
 
 .section {
-  display: inline-block;
+  display: block;
   margin-top: 15px;
   margin-left: 30px;
   margin-bottom: 30px;
